Enable Proximity Wake (accidental pocket wakeups)
Conflicts:
	overlay/frameworks/base/core/res/res/values/config.xml

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -210,4 +210,10 @@
     <!-- Whether device supports double tap to wake -->
     <bool name="config_supportDoubleTapWake">true</bool>
 
+    <!-- Check the proximity sensor prior to waking up screen -->
+    <bool name="config_proximityCheckOnWake">true</bool>
+    <!--
+    <integer name="config_proximityCheckTimeout">100</integer>
+    -->
+
 </resources>
